# pySYCL

./: .gitignore  CMakeLists.txt  README.md  build.sh  setup.py  test.py
pySYCL/: __init__.py  interface.pyx  pySYCL.pyx
pySYCL/core/: __init__.py
pySYCL/core/cython/: core.c
pySYCL/cpp/: core.cpp  memory.cpp  query.cpp
pySYCL/cython/: core.pyx  memory.pyx  query.pyx  types.pyx
pySYCL/include/: core.hpp  memory.hpp  query.hpp  types.hpp
pySYCL/qis/: __init__.py
pySYCL/qis/cython/: qis.c  qis.pyx
test/: test.py
